# vanity-eth-address-mac

./: Cargo.toml  HashAndMatch.air  HashAndMatch.metal  Keccak256.air  Keccak256.metal  README.md  libHashAndMatch.metallib  libKeccak256.metallib
src/: cpu_operations.rs  gpu_operations.rs  main.rs
